SignUp and Login pages fixed + some pages changes + bug fixes

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -8,7 +8,7 @@
       <span class="logo-description">Livro de Obra</span>
     </a>
     <div class="profile">
-      <button class="notifications" routerLink="invites">
+      <button class="notifications" (click)="onInvitesClick()">
         <mat-icon *ngIf="notification > 0" aria-hidden="false" aria-label="Example home icon" fontIcon="notifications"
                   [matBadge]="notification" matBadgeColor="warn">
         </mat-icon>
