--- a/code/js/front-end/src/app/invite-list/invite-list.component.html
+++ b/code/js/front-end/src/app/invite-list/invite-list.component.html
@@ -1,17 +1,21 @@
-<div class="header">
-  <button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-  </button>
-  <h2 class="title">Convites</h2>
+<div class="container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <span class="title">Convites</span>
 </div>
 <div>
-  <input type="text" placeholder="Procurar Verificação" [(ngModel)]="inputValue"
+  <input type="text" placeholder="Procurar convite" [(ngModel)]="inputValue"
          (ngModelChange)="filterInvites(inputValue)">
 </div>
 <mat-divider></mat-divider>
 <div>
   <mat-list *ngFor="let entry of filteredInvites">
     <mat-list-item (click)="onInviteClick(entry.workId)">
+      <mat-icon class="item-icon" matListItemIcon>mail</mat-icon>
       <div matListItemTitle>{{ entry.workTitle }}</div>
       <div matListItemLine>{{ entry.admin }} convidou-te para seres parte desta obra como {{ entry.role }}</div>
     </mat-list-item>
