--- a/code/js/front-end/src/app/login/login.component.html
+++ b/code/js/front-end/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-<body>
 <div class="container">
   <div class="left">
     <img src="assets/logo.png" alt="" class="logo">
@@ -9,10 +8,10 @@
     <form (ngSubmit)="login()">
       <div class="input">
         <div>
-          <label for="username">Nome de Utilizador</label>
+          <label for="username">Utilizador</label>
         </div>
         <div>
-          <input type="text" id="username" name="username" [(ngModel)]="username" required>
+          <input type="text" id="username" name="username" placeholder="Username / Email" [(ngModel)]="username" required>
         </div>
       </div>
       <div class="input">
@@ -20,11 +19,11 @@
           <label for="password">Palavra Passe</label>
         </div>
         <div>
-          <input type="password" id="password" name="password" [(ngModel)]="password" required>
+          <input type="password" id="password" name="password" placeholder="Palavra passe" [(ngModel)]="password" required>
         </div>
       </div>
       <div>
-        <button mat-stroked-button class="button" type="submit">Login</button>
+        <button mat-stroked-button class="submit" type="submit">Login</button>
       </div>
     </form>
     <div>
@@ -32,4 +31,3 @@
     </div>
   </div>
 </div>
-</body>
