--- a/code/js/front-end/src/app/pending-users/pending-users.component.html
+++ b/code/js/front-end/src/app/pending-users/pending-users.component.html
@@ -1,22 +1,25 @@
-<div class="header">
-  <button mat-button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-    Voltar
-  </button>
-  <h2 class="title">Pedidos pendentes para funcionários da Câmara Municipal</h2>
+<div class="container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <span class="title">Pedidos pendentes para funcionários da Câmara Municipal</span>
 </div>
 <div>
-  <form>
-    <input type="text" placeholder="Procurar Convite" #filter>
-    <button class="primary" type="button" (click)="filterPending(filter.value)">Search</button>
-  </form>
+  <input type="text" placeholder="Procurar utilizador" [(ngModel)]="inputValue"
+         (ngModelChange)="filterPending(inputValue)">
 </div>
 <mat-divider></mat-divider>
 <div>
   <mat-list *ngFor="let item of filteredPendingList">
     <mat-list-item>
-      <div matListItemTitle style="font-weight: bold" (click)="onItemClick(item.username)">{{ item.email }}</div>
-      <div matListItemLine style="font-weight: bold">NIF: {{ item.nif }} | Association: {{ item.association.name }} - {{ item.association.number }}</div>
+      <mat-icon class="item-icon" matListItemIcon>person</mat-icon>
+      <div matListItemTitle style="font-weight: bold">{{ item.name }}</div>
+      <div matListItemLine style="font-weight: bold">Nome de utilizador: {{ item.username }} | Email: {{ item.email }} | NIF: {{ item.nif }} | Association: {{ item.association.name }}
+        - N°. de associado {{ item.association.number }} | Câmara Municipal de {{ item.location.county }}
+      </div>
       <div matListItemMeta>
         <button mat-icon-button class="accept-button" (click)="onAccept(item.id)">
           <mat-icon>check</mat-icon>
