--- a/code/js/front-end/src/app/list-users/list-users.component.html
+++ b/code/js/front-end/src/app/list-users/list-users.component.html
@@ -1,8 +1,11 @@
-<div class="header">
-  <button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-  </button>
-  <h2 class="title">Lista de todos os Utilizadores da aplicação</h2>
+<div class="main-container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <span class="title">Todos os utilizadores</span>
 </div>
 <div>
   <input type="text" class="search-input" placeholder="Procurar Registo" [(ngModel)]="value"
