--- a/code/js/front-end/src/app/login/login.component.html
+++ b/code/js/front-end/src/app/login/login.component.html
@@ -4,14 +4,15 @@
     <h1 class="title">Livro de obra</h1>
   </div>
   <div class="right">
-    <h1 class="page-title">Iniciar Sessão</h1>
-    <form (ngSubmit)="login()">
+    <div class="form">
+      <h1 class="page-title">Iniciar Sessão</h1>
       <div class="input">
         <div>
           <label for="username">Utilizador</label>
         </div>
         <div>
-          <input type="text" id="username" name="username" placeholder="Username / Email" [(ngModel)]="username" required>
+          <input type="text" id="username" name="username" placeholder="Username / Email" [(ngModel)]="username"
+                 required>
         </div>
       </div>
       <div class="input">
@@ -19,13 +20,14 @@
           <label for="password">Palavra Passe</label>
         </div>
         <div>
-          <input type="password" id="password" name="password" placeholder="Palavra passe" [(ngModel)]="password" required>
+          <input type="password" id="password" name="password" placeholder="Palavra passe" [(ngModel)]="password"
+                 required>
         </div>
       </div>
       <div>
-        <button mat-stroked-button class="submit" type="submit">Login</button>
+        <button mat-stroked-button class="submit" (click)="login()">Login</button>
       </div>
-    </form>
+    </div>
     <div>
       <p class="text">Não tens conta? <a (click)="onSignUpClick()">Regista-te aqui.</a></p>
     </div>
