--- a/code/js/front-end/src/app/my-logs/my-logs.component.html
+++ b/code/js/front-end/src/app/my-logs/my-logs.component.html
@@ -1,4 +1,11 @@
 <div class="main-container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <span class="title">Todos os registos</span>
   <div class="content">
     <div>
       <div class="top-bar">
