--- a/code/js/front-end/src/app/work-verifications/work-verifications.component.html
+++ b/code/js/front-end/src/app/work-verifications/work-verifications.component.html
@@ -1,8 +1,11 @@
-<div class="header">
-  <button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-  </button>
-  <h2 class="title">Verificações para Obras</h2>
+<div class="main-container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <span class="title">Pedidos de verificação</span>
 </div>
 <div>
     <input type="text" placeholder="Procurar Verificação" [(ngModel)]="inputValue" (ngModelChange)="filterVerifications(inputValue)">
