PDF generator implementation started

--- a/code/js/front-end/src/app/pdfservice/pdfservice.component.html
+++ b/code/js/front-end/src/app/pdfservice/pdfservice.component.html
@@ -1,4 +1,7 @@
-<body *ngIf="openingTerm">
+
+
+<button (click)="generatePdf()">PDF</button>
+<body #content>
 <div class="container">
   <div class="form-section">
     <h2>TERMO DE ABERTURA</h2>
