--- a/code/js/front-end/src/app/pdfservice/pdfservice.component.css
+++ b/code/js/front-end/src/app/pdfservice/pdfservice.component.css
@@ -1,39 +1,80 @@
-body {
-  font-family: Arial, sans-serif;
-  justify-content: center;
+.top_rw{ background-color:#f4f4f4; }
+.td_w{ }
+button{ padding:5px 10px; font-size:14px;}
+.invoice-box {
+  max-width: 890px;
+  margin: auto;
+  padding:10px;
+  border: 1px solid #eee;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .15);
+  font-size: 14px;
+  line-height: 24px;
+  font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+  color: #555;
 }
-
-p {
-  margin-bottom: 5px;
-}
-.container {
-  width: 70%;
-  margin: 0 auto;
-}
-
-.form-section {
-  margin-bottom: 20px;
-}
-
-.form-section h2 {
-  text-align: center;
-}
-
-.form-section p {
-  margin: 5px 0;
-}
-
-.form-section input {
+.invoice-box table {
   width: 100%;
-  padding: 8px;
-  margin: 5px 0;
-  box-sizing: border-box;
+  line-height: inherit;
+  text-align: left;
+  border-bottom: solid 1px #ccc;
 }
-
-.signature input {
-  width: auto;
+.invoice-box table td {
+  padding: 5px;
+  vertical-align:middle;
 }
-
-.input-camp {
-  color: blue;
+.invoice-box table tr td:nth-child(2) {
+  text-align: right;
+}
+.invoice-box table tr.top table td {
+  padding-bottom: 20px;
+}
+.invoice-box table tr.top table td.title {
+  font-size: 45px;
+  line-height: 45px;
+  color: #333;
+}
+.invoice-box table tr.information table td {
+  padding-bottom: 40px;
+}
+.invoice-box table tr.heading td {
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+  font-weight: bold;
+  font-size:12px;
+}
+.invoice-box table tr.details td {
+  padding-bottom: 20px;
+}
+.invoice-box table tr.item td{
+  border-bottom: 1px solid #eee;
+}
+.invoice-box table tr.item.last td {
+  border-bottom: none;
+}
+.invoice-box table tr.total td:nth-child(2) {
+  border-top: 2px solid #eee;
+  font-weight: bold;
+}
+@media only screen and (max-width: 600px) {
+  .invoice-box table tr.top table td {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  .invoice-box table tr.information table td {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+}
+/** RTL **/
+.rtl {
+  direction: rtl;
+  font-family: Tahoma, 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+}
+.rtl table {
+  text-align: right;
+}
+.rtl table tr td:nth-child(2) {
+  text-align: left;
 }
